tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__BasicAutomation-AAAAAAAAAAAAAAAAAAAADg==__DesulfurizingOil-AAAAAAAAAAAAAAAAAAAGZA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1636,
  "prerequisites": [
    1632,
    1633
  ],
  "properties": {
    "auto_claim": false,
    "desc": "This quest line will show you how to automate desulfurizing of oil products. Return here once you have unlocked the LV distillery quest and have some polyethylene plates.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Desulfurizing Oil Automation",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1632,
    1633
  ],
  "rewards": [],
  "tasks": []
}
