tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__BasicAutomation-AAAAAAAAAAAAAAAAAAAADg==__Desulfurizingthe-AAAAAAAAAAAAAAAAAAAGZw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1639,
  "prerequisites": [
    1638
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Now it's time to start the actual desulfurization. Use a chemical reactor of your choice, fill it with sulfuric light fuel and hook it to power. Now connect an interface pipe to it. Put an item stock keeper inside set to store 4 hydrogen cells. Then put in item extractor set to extract hydrogen sulfide and empty cells.\n\nGo to your hydrogen storage super tank and put in a crafting chip set to make one hydrogen cell from one empty cell.\n\nAnd that's all.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Desulfurizing the Oil",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1638
  ],
  "rewards": [],
  "tasks": []
}
