tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__BasicAutomation-AAAAAAAAAAAAAAAAAAAADg==__DynamicItemRespo-AAAAAAAAAAAAAAAAAAAGXQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1629,
  "prerequisites": [
    1627
  ],
  "properties": {
    "auto_claim": false,
    "desc": "The dynamic item responder chip behaves exactly like an item responder chip, but instead of you setting up which items it should accept, it looks in the chest what items are there and those items it will accept.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Dynamic Item Responder",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1627
  ],
  "rewards": [],
  "tasks": []
}
