tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__BasicAutomation-AAAAAAAAAAAAAAAAAAAADg==__ElectrolyzingWat-AAAAAAAAAAAAAAAAAAAGZg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1638,
  "prerequisites": [
    1637
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Now let's automate electrolyzing water into oxygen and hydrogen. You'll need hydrogen for tons of stuff including desulfurization, obtaining tungsten, and nitric acid production. Oxygen is also useful as I'm sure you noticed when making steel.\n\nHow to set it up:\n\nPlace the electrolyzer down and connect it to water and electricity. Place the 2 super tanks nearby. Set the electrolyzer to produce hydrogen gas and oxygen cells. Use normal GT fluid pipes to output the hydrogen gas into one super tank. That is now your hydrogen storage. Now connect interface pipes to all 3 machines.\n\nFor the electrolyzer put in item stock keeper set to keep 2 empty cells stored. Also put in extractor set to extract oxygen cells.\n\nNow for the oxygen storage put it item responder chip set to accept oxygen cells and extractor set to extract empty cells.\n\nNow put some empty cells inside your default storage chest and don't forget to have a broadcaster there.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Electrolyzing Water",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1637
  ],
  "rewards": [],
  "tasks": []
}
