tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__BasicAutomation-AAAAAAAAAAAAAAAAAAAADg==__FurtherAutomatio-AAAAAAAAAAAAAAAAAAAGEA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1552,
  "prerequisites": [
    108
  ],
  "properties": {
    "auto_claim": false,
    "desc": "If you want to load and unload a lot of different items from your cargo manager the pipes can get quite messy. The external distributor is a block you can place next to your cargo manager and it will help you to access different slots which you can specify in its GUI. Quite handy for pumping items in and out!",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Further Automation",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    108
  ],
  "rewards": [],
  "tasks": []
}
