tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__BasicAutomation-AAAAAAAAAAAAAAAAAAAADg==__InteractingWithS-AAAAAAAAAAAAAAAAAAAGWQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1625,
  "prerequisites": [
    1624
  ],
  "properties": {
    "auto_claim": false,
    "desc": "That's all nice and all, but none of these pipes connect to chests and machines. What am I supposed to do with them?\n\nI'm glad you asked. You are going to need a special pipe for that. This is a pipe you need to use to connect to machines and chests. You'll have to set it up with chips that we'll make soon.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Interacting With Stuff",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1624
  ],
  "rewards": [],
  "tasks": []
}
