tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__BasicAutomation-AAAAAAAAAAAAAAAAAAAADg==__ItemExtractorChi-AAAAAAAAAAAAAAAAAAAGXg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1630,
  "prerequisites": [
    1627,
    1628
  ],
  "properties": {
    "auto_claim": false,
    "desc": "This chip will extract items from the connecting inventory. The extracted items then look for pipes with item responder chips where there's a free space they could go. If they don't find any they will go to the overflow default storage chest.\n\nIf you want it to extract everything leave the filter empty and set it to blacklist.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Item Extractor Chip",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1627,
    1628
  ],
  "rewards": [],
  "tasks": []
}
