tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__BasicAutomation-AAAAAAAAAAAAAAAAAAAADg==__ItemOverflowChip-AAAAAAAAAAAAAAAAAAAGXA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1628,
  "prerequisites": [
    1626
  ],
  "properties": {
    "auto_claim": false,
    "desc": "This chip stores the items in a connected inventory. It designates a storage for items that have no other place to go. It is strongly recommended to have a default storage for items in every pipe system, otherwise bad stuff can happen. Best used with a large chest (diamond for example).\n\nIt seems to have some bugs though, so don't craft more than one without testing it first.\n\nYou might have to just use a normal item responder and add the items you want routed back to your overflow spot.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Item Overflow Chip",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1626
  ],
  "rewards": [],
  "tasks": []
}
